--- a/CacxClient/CacxClient.csproj
+++ b/CacxClient/CacxClient.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Cristiano3120.Logger" Version="1.0.6" />
+    <PackageReference Include="DnsClient" Version="1.8.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
   </ItemGroup>
 
