--- a/CacxClient/CacxClient.csproj
+++ b/CacxClient/CacxClient.csproj
@@ -10,6 +10,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Page Remove="Application\App.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ApplicationDefinition Include="Application\App.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Cristiano3120.Logger" Version="1.0.6" />
     <PackageReference Include="DnsClient" Version="1.8.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
