--- a/CacxServer/appsettings.json
+++ b/CacxServer/appsettings.json
@@ -2,5 +2,6 @@
   "AllowedHosts": "*",
   "Testing": true,
   "Url": "https://sweeping-usefully-marten.ngrok-free.app",
-  "TestUrl": "https://localhost:5001"
+  "TestUrl": "https://localhost:5001",
+  "UserDataDbConnString": "Host=localhost;Database=Messenger;Username=postgres;Password=Cristiano2007!;Pooling=true;MinPoolSize=1;MaxPoolSize=20;SSL Mode=Disable;"
 }
