--- a/CacxServer/appsettings.json
+++ b/CacxServer/appsettings.json
@@ -3,5 +3,9 @@
   "Testing": true,
   "Url": "https://sweeping-usefully-marten.ngrok-free.app",
   "TestUrl": "https://localhost:5001",
-  "UserDataDbConnString": "Host=localhost;Database=Messenger;Username=postgres;Password=Cristiano2007!;Pooling=true;MinPoolSize=1;MaxPoolSize=20;SSL Mode=Disable;"
+  "UserDataDbConnString": "Host=localhost;Database=Messenger;Username=postgres;Password=Cristiano2007!;Pooling=true;MinPoolSize=1;MaxPoolSize=20;SSL Mode=Disable;",
+  "workerId": 0,
+  "minioEndpoint": "localhost:9000",
+  "minioAccessKey": "Cacx",
+  "minioPassword": "Cristiano2007!"
 }
