Fixes #16 Fixes #24 Fixes #25 Fixes #20

--- a/CacxServer/appsettings.json
+++ b/CacxServer/appsettings.json
@@ -1,8 +1,6 @@
 {
   "AllowedHosts": "*",
-  "Testing": true,
-  "Url": "https://sweeping-usefully-marten.ngrok-free.app",
-  "TestUrl": "https://localhost:5001",
+  "URL": "https://localhost:5001",
   "UserDataDbConnString": "Host=localhost;Database=Messenger;Username=postgres;Password=Cristiano2007!;Pooling=true;MinPoolSize=1;MaxPoolSize=20;SSL Mode=Disable;",
   "workerId": 0,
   "minioEndpoint": "localhost:9000",
