--- a/CacxClient/appSettings.json
+++ b/CacxClient/appSettings.json
@@ -1,6 +1,6 @@
 {
   "AllowedHosts": "*",
-  "Testing": true,
+  "Testing": false,
   "Url": "https://sweeping-usefully-marten.ngrok-free.app",
   "TestUrl": "https://localhost:5001"
 }
