--- a/CacxServer/docker-compose.yml
+++ b/CacxServer/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   minio:
     image: quay.io/minio/minio:latest
@@ -14,5 +13,18 @@ services:
       - minio_data:/data
     command: server /data --console-address ":9001"
 
+  nginx:
+    image: nginx:latest
+    container_name: nginx-cdn
+    restart: unless-stopped
+    depends_on:
+      - minio
+    ports:
+      - "8080:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - nginx_cache:/var/cache/nginx
+
 volumes:
   minio_data:
+  nginx_cache:
