Saving before trying a new Window system. Trying to switch from multiple windows to one

--- a/CacxClient/CacxClient.csproj
+++ b/CacxClient/CacxClient.csproj
@@ -28,4 +28,10 @@
     <ProjectReference Include="..\CacxShared\CacxShared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appSettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
