--- a/CacxServer/nginx/nginx.conf
+++ b/CacxServer/nginx/nginx.conf
@@ -17,6 +17,7 @@ http {
     server {
         listen 80;
         server_name localhost;
+	client_max_body_size 200M;
 
         # =============================
         # CDN (MinIO)
@@ -37,6 +38,11 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+	    gzip off;
+            client_body_buffer_size 16M;
+    	    proxy_request_buffering off;
+            proxy_buffering off;
         }
 
         # =============================
@@ -44,7 +50,7 @@ http {
         # =============================
         location /api/ {
             # Weiterleitung an deine lokale .NET API
-            proxy_pass https://host.docker.internal:5001/;
+            proxy_pass https://host.docker.internal:5001;
 
             # SSL-Überprüfung deaktivieren (da lokal)
             proxy_ssl_verify off;
